--- a/templates/accounts/signup_customer.html
+++ b/templates/accounts/signup_customer.html
@@ -7,23 +7,31 @@
   <div class="login-container">
     <section class="login" id="login">
       <header>
-        <h2>Login</h2>
+        <h2>Customer</h2>
+        <h4>Sign Up</h4>
       </header>
       <form class="login-form" method="POST">
         {% csrf_token %}
+        <input type="text" class="login-input" name="name" id="name" placeholder="Name" required autofocus />
         <input type="text" class="login-input" name="username" id="username" placeholder="Username" required
           autofocus />
+        <input type="text" class="login-input" name="email" id="email" placeholder="Email" required autofocus />
+        <input type="number" class="login-input" name="mobile" id="mobile" placeholder="Phone number" required
+          autofocus />
         <input type="password" class="login-input" name="password" id="password" placeholder="Password" required />
+        <input type="password" class="login-input" name="confirm_password" id="confirm_password"
+          placeholder="Confirm Password" required />
         <div class="submit-container">
-          <input type="submit" class="login-button" value="SIGN IN">
+          <input type="submit" class="login-button" value="SIGN UP">
         </div>
       </form>
     </section>
-    <p>Don't have an account? <a href="{% url 'intermediate' %}">Sign Up</a></p>
+    <p>Already have an account? <a href="{% url 'login' %}">Sign in</a></p>
   </div>
 </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
 {% endblock content %}
