--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,8 +10,13 @@
         <li class="nav-button-Products"><a href="../products/index.html">Products</a></li>
         <li class="nav-button-Aboutus"><a href="../about us/about.html">About Us</a></li>
         <li class="nav-button-Contactus"><a href="../contact/contact.html">Contact Us</a></li>
-        <li class="nav-button-Login" id="login"><a href="signin.html" id="log" onclick="">Login</a></li>
-
+        {% if user.is_authenticated %}
+        <li class="nav-button-Login" id="login"><a href="{% url 'logout' %}" id="log">Logout</a></li>
+        <li class="nav-button-Login" id="login" style="float: right; margin-right: 10px"><a id="log">Hi, {{ user }}</a>
+        </li>
+        {% else %}
+        <li class="nav-button-Login" id="login"><a href="{% url 'login' %}" id="log">Login</a></li>
+        {% endif %}
     </ul>
 </nav>
 
