--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -3,7 +3,7 @@
 
 <nav id="main-menu">
     <ul class="nav-bar">
-        <li class="nav-button-img"><img src="logo.jpeg" alt="" width="38px" height="35px"></li>
+        <li class="nav-button-img"><img src="{% static 'images/logo.jpeg' %}" alt="" width="38px" height="35px"></li>
         <li class="nav-button-home"><a href="{% url 'home' %}">Home</a></li>
         <li class="nav-button-Services"><a href="../services/book-form.html" id="Services">Book Raddiwala</a></li>
         <li class="nav-button-RateCard"><a href="{% url 'rate' %}">Rate Card</a></li>
