--- a/static/css/about.css
+++ b/static/css/about.css
@@ -60,7 +60,7 @@ footer{
 
 /*blog*/
 .onee{
-    background: url("wallpaperbetter.com_1920x1080.jpg");
+  background: url("../images/about/wallpaperbetter.com_1920x1080.jpg");
 }
 .main
 {
@@ -173,7 +173,7 @@ transition: 0.2s all ease-in-out;
 }
 /*About Us*/
 .top{
-    background: url("wallpaperbetter.com_1920x1080.jpg");
+  background: url("../images/about/wallpaperbetter.com_1920x1080.jpg");
     padding-top:50px;
     padding-bottom:50px;
 }
@@ -217,7 +217,7 @@ transition: 0.2s all ease-in-out;
     width: 60%;
   }
   .beautify{
-    background: url("wallpaperbetter.com_1920x1080.jpg");
+    background: url("../images/about/wallpaperbetter.com_1920x1080.jpg");
     padding-top:50px;
     padding-bottom:50px;
     font-weight: 1000;
