--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,7 +5,7 @@
     <ul class="nav-bar">
         <li class="nav-button-img"><img src="{% static 'images/logo.jpeg' %}" alt="" width="38px" height="35px"></li>
         <li class="nav-button-home"><a href="{% url 'home' %}">Home</a></li>
-        <li class="nav-button-Services"><a href="../services/book-form.html" id="Services">Book Raddiwala</a></li>
+        <li class="nav-button-Services"><a href="{% url 'book' %}" id="Services">Book Raddiwala</a></li>
         <li class="nav-button-RateCard"><a href="{% url 'rate' %}">Rate Card</a></li>
         <li class="nav-button-Aboutus"><a href="{% url 'about' %}">About Us</a></li>
         <li class="nav-button-Contactus"><a href="{% url 'contact' %}">Contact Us</a></li>
