--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,6 +6,10 @@
         <li class="nav-button-img"><img src="{% static 'images/logo.jpeg' %}" alt="" width="38px" height="35px"></li>
         <li class="nav-button-home"><a href="{% url 'home' %}">Home</a></li>
         <li class="nav-button-Services"><a href="{% url 'book' %}" id="Services">Book Raddiwala</a></li>
+        </li>
+        {% if user.username == "admin" %}
+        <li class="nav-button-Services"><a href="{% url 'bookings' %}" id="Services">Bookings</a></li>
+        {% endif %}
         <li class="nav-button-RateCard"><a href="{% url 'rate' %}">Rate Card</a></li>
         <li class="nav-button-Aboutus"><a href="{% url 'about' %}">About Us</a></li>
         <li class="nav-button-Contactus"><a href="{% url 'contact' %}">Contact Us</a></li>
